# Synapse

./: .gitignore  MCP_IMPLEMENTATION_REPORT.md  MCP_STANDARD_FIX_REPORT.md  MCP_TEST_RESULTS.md  README.md  README_en.md  pyproject.toml
backend/: .env.example  config.yaml  main.py  mcp_stdio_server.py  pyproject.toml  sql_app.db  test_api.py  test_auth.py  标准协议测试指南.md  测试指南.md
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_services.py  c7a50d642d7d_add_users_table.py
backend/api/: auth.py  combinations.py  dashboard.py  mcp_protocol.py  mcp_servers.py  services.py  tools.py  users.py
backend/core/: __init__.py  auth.py  config.py  database.py  init_admin.py  migration.py
backend/data/: combinations.json
backend/mcp/: openapi_to_mcp.py  protocol.py  server.py  session.py
backend/models/: combination.py  db_models.py  mcp_server.py  service.py  user.py
backend/repositories/: __init__.py  combination_repository.py  mcp_server_repository.py  service_repository.py
backend/services/: openapi_fetcher.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.ts  style.css
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/utils/: auth.ts
frontend/src/views/: Home.vue  Login.vue  McpCombination.vue  McpManagement.vue  Services.vue  UserManagement.vue
